--- a/frontend/src/styles/HomePage.css
+++ b/frontend/src/styles/HomePage.css
@@ -1,13 +1,22 @@
 .home-container {
     display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
     background: linear-gradient(to right, #fffafe, #5e5088);
     color: white;
     text-align: center;
+}
+
+
+.home-content {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 50px;
 }
+
 
 .home-left {
     flex: 1;
@@ -17,36 +26,38 @@
 }
 
 .home-left img {
-    margin-bottom: 131px;
-    border-radius: 17.063rem;
+    border-radius: 17rem;
     max-width: 60%;
     height: auto;
     animation: fadeIn 1.5s ease-in-out;
 }
 
+
 .home-right {
+    margin-top: -35px;
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    padding: 20px;
-    margin-bottom: 137px;
+    padding: 66px;
 }
+
 
 .home-title {
     font-size: 4rem;
     font-weight: bold;
-    color: #c5bbf6;
+    color: #26176e9e;
     margin-bottom: 20px;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-    animation: slideIn 1.5s ease-in-out;
 }
+
 
 .home-description {
     font-size: 1.5rem;
     margin-bottom: 30px;
 }
+
 
 .home-button {
     padding: 15px 30px;
@@ -66,12 +77,14 @@
     transform: scale(1.05);
 }
 
-@keyframes fadeIn {
-    from { opacity: 0; transform: translateY(-20px); }
-    to { opacity: 1; transform: translateY(0); }
-}
-
-@keyframes slideIn {
-    from { opacity: 0; transform: translateX(50px); }
-    to { opacity: 1; transform: translateX(0); }
+.home-footer {
+    width: 100%;
+    background-color: #3c3c3c;
+    color: white;
+    text-align: center;
+    padding: 1px 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    font-size: 0.9rem;
 }
