--- a/frontend/src/styles/SelectionPage.css
+++ b/frontend/src/styles/SelectionPage.css
@@ -94,3 +94,15 @@
     background: #26557c;
     transform: scale(1.05);
 }
+
+.home-footer {
+    width: 100%;
+    background-color: #3c3c3c;
+    color: white;
+    text-align: center;
+    padding: 1px 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    font-size: 0.9rem;
+}
